adjust: pd navigations

--- a/create-penggalang-dana.html
+++ b/create-penggalang-dana.html
@@ -30,18 +30,18 @@
 <body>
     <main>
         <div class="home-side-bar">
-            <a href="home-donatur.html"><img id="img-logo" src="Assets/logo.png"></a>
-            <a href="home-donatur.html">
-                <div class="home-menu">
-                    <div class="home-menu-inner">
-                        <img src="Assets/home.png">
+            <a href="home-penggalang-dana.html"><img id="img-logo" src="Assets/logo.png"></a>
+            <a href="home-penggalang-dana.html">
+                <div class="home-menu-transparant">
+                    <div class="home-menu-transparant-inner" style="padding-left: 5px !important;">
+                        <img style="width: 50px !important;" src="Assets/home-fill.png">
                     </div>
-                    <h6>Home</h6>
+                    <h6 style="padding-left: 10px !important;">Home</h6>
                 </div>
             </a>
             <br><br>
 
-            <a href="profile-donatur.html">
+            <a href="profile-pd.html">
                 <div class="home-menu-transparant">
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-person-circle.png">
@@ -51,27 +51,15 @@
             </a>
             <br><br>
 
-            <a href="profile-donatur.html">
-                <div class="home-menu-transparant">
-                    <div class="home-menu-transparant-progress-active">
-                        3
+            <a href="create-penggalang-dana.html">
+                <div class="home-menu">
+                    <div class="home-menu-inner">
+                        <img style="width: 30px !important; height: 30px !important;margin-top: 5px;" src="Assets/pencil.png">
                     </div>
-                    <progress id="file" value="60" max="100"></progress>
-                    <div class="home-menu-transparant-progress">
-                        4
-                    </div>
+                    <h6>Buat</h6>
                 </div>
             </a>
             <br><br>
-
-            <a href="rewards.html">
-                <div class="home-menu-transparant">
-                    <div class="home-menu-transparant-inner">
-                        <img src="Assets/ic-reward.png">
-                    </div>
-                    <h6>Rewards</h6>
-                </div>
-            </a>
 
             <div class="contact-us">
                 <h5>Customer Service</h5>
@@ -95,10 +83,10 @@
                     <a href="search.html"><img src="Assets/ic-magnifier.png"></a>
                 </div>
                 <label class="switch">
-                    <input id="switch-checkbox" type="checkbox" checked>
+                    <input id="switch-checkbox" type="checkbox">
                     <span class="slider round"></span>
                 </label>
-                <h5>Donatur</h5>
+                <h5>Penggalang Dana</h5>
                 <a href="profile-notifications.html">
                     <div class="notification">
                         <img id="notif-img" src="Assets/alert.png">
@@ -147,9 +135,8 @@
                                     <select class="form-select" id="kategori" aria-label="Default select example"
                                         required>
                                         <option selected>Pilih Kategori</option>
-                                        <option value="1">One</option>
-                                        <option value="2">Two</option>
-                                        <option value="3">Three</option>
+                                        <option value="1">Charity</option>
+                                        <option value="2">Streaming</option>
                                     </select>
                                 </div>
                             </div>
