--- a/profile-pd-change-password.html
+++ b/profile-pd-change-password.html
@@ -10,9 +10,11 @@
         <link rel="stylesheet" href="CSS/profile-style.css">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
         <script src="JS/header.js"></script>
+        <script src="JS/edit.js"></script>
 
         <title>DonateKUY</title>
     </head>
@@ -90,7 +92,7 @@
                 <div class="menus">
                     <a href="profile-pd.html">
                         <div class="submenu">
-                            <img src="Assets/ic-profile.png"><span class="active">Profile ></span>
+                            <img src="Assets/ic-profile.png"><span>Profile</span>
                         </div>
                     </a>
                     <hr>
@@ -104,7 +106,7 @@
                     <hr>
                     <a href="profile-pd-change-password.html">
                         <div class="submenu">
-                            <img src="Assets/ic-password.png"><span>Password & Security</span>
+                            <img src="Assets/ic-password.png"><span class="active">Password & Security ></span>
                         </div>
                     </a>
                     <hr>
@@ -112,44 +114,27 @@
             </div>
 
             <div class="content" style="background-color: white;">
-                <div style="color: black;">
-                    <h1 style="font-weight: bolder;">Profile</h1>
-                    <div class="profile-container">
-                        <div class="profile-card">
-                            <img id="avatar" src="Assets/img-person.png" style="width: 160px !important; height: 160px !important;">
-                            <p style="font-size: 18px;color: #6B6B6B;">Tanggal Bergabung: 27 Mei 2021</p>
+                <div style="color: black; padding: 50px !important;">
+                    <h1 style="font-weight: bolder;">Ganti Password</h1>
+                    <br><br><br>
+                    <div class="profile-container" style="display: flex !important; text-align: center !important;">
+                        <div class="edit-profile-section" style="text-align: left; width:40%;">
+                            <label for="name" style="color: #A09F9F; font-weight: bolder; padding-bottom: 10px;">Kata Sandi Lama</label><br>
+                            <input type="text">
+                            <br><br>
 
-                            <br><br><br>
-                            <div class="balance-section">
-                                <h2 style="color: #6b6b6b; text-align: left;">Saldo</h2>
+                            <label for="name" style="color: #A09F9F; font-weight: bolder; padding-bottom: 10px;">Kata Sandi Baru</label><br>
+                            <input type="text">
+                            <br><br>
 
-                                <div class="balance-cell">
-                                    <h3 style="color: white; font-weight: bolder;margin-bottom: 0px !important;">Rp 5.300.000</h3>
-                                </div>
-                                <br>
-                                <button id="btn-deposit">Tarik Saldo</button>
-                            </div>
+                            <label for="name" style="color: #A09F9F; font-weight: bolder; padding-bottom: 10px;">Konfirmasi Kata Sandi</label><br>
+                            <input type="text">
+                            <br><br>
+                                
+                            <button id="btn-edit-profile" style="margin-top: 50px !important;">Ubah Password</button>
                         </div>
-
-                        <div class="profile-info">
-                            <label for="name" style="color: #A09F9F;font-weight: bolder;padding-bottom: 10px;">Nama Depan</label>
-                            <p>Robert</p>
-                            <hr><br>
-
-                            <label for="name" style="color: #A09F9F;font-weight: bolder;padding-bottom: 10px;">Nama Belakang</label>
-                            <p>Mulawarman</p>
-                            <hr><br>
-
-                            <label for="name" style="color: #A09F9F;font-weight: bolder;padding-bottom: 10px;">Email</label>
-                            <p>robert.mwm@sunib.ac.id</p>
-                            <hr><br>
-
-                            <label for="name" style="color: #A09F9F;font-weight: bolder;padding-bottom: 10px;">Nomor Telepon</label>
-                            <p>0812-3456-7238</p>
-                            <hr><br>
-                            <a href="profile-pd-edit.html">
-                                <button id="btn-edit-profile">Ubah Profile</button>
-                            </a>
+                        <div style="width: 60%;">
+                            <img src="Assets/ic-password-logo.png">
                         </div>
                     </div>
                 </div>
