--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
                 <label for="password">Password</label><br>
                 <input type="password" name="password" id="password" required><br><br>
 
-                <label for="confirm-password">Confirm Password</label><br>
+                <label for="confirm-password">Konfirmasi Password</label><br>
                 <input type="password" name="confirm-password" id="confirm-password" required>
 
                 <a href="#">
