fix: edit profile unclickable sub menu

--- a/profile-edit.html
+++ b/profile-edit.html
@@ -102,14 +102,14 @@
 
             <div class="profile-submenu">
                 <div class="menus">
-                    <a href="#">
+                    <a href="profile-donatur.html">
                         <div class="submenu">
                             <img src="Assets/ic-profile.png"><span class="active">Profile ></span>
                         </div>
                     </a>
                     <hr>
 
-                    <a href="#">
+                    <a href="profile-history.html">
                         <div class="submenu">
                             <img src="Assets/ic-history.png"><span>Donation History</span>
                         </div>
@@ -117,14 +117,14 @@
 
                     <hr>
 
-                    <a href="#">
+                    <a href="profile-notifications.html">
                         <div class="submenu">
                             <img src="Assets/ic-notif-gray.png"><span>Notifications</span>
                         </div>
                     </a>
 
                     <hr>
-                    <a href="">
+                    <a href="profile-change-password.html">
                         <div class="submenu">
                             <img src="Assets/ic-password.png"><span>Password & Security</span>
                         </div>
@@ -132,7 +132,7 @@
                     <hr>
                 </div>
             </div>
-
+            
             <div class="content" style="background-color: white;">
                 <div style="color: black; padding: 50px !important;">
                     <h1 style="font-weight: bolder;">Edit Profile</h1>
