--- a/create-penggalang-dana.html
+++ b/create-penggalang-dana.html
@@ -144,19 +144,19 @@
                                 <div class="col ">
                                     <label for="judul" class="form-label mb-0">Judul Penggalangan
                                         Dana<span style="color: red;">*</span></label>
-                                    <p class="me-4 mb-0" style="float: right;">0/50</p>
+                                    <p class="me-4 mb-0" style="float: right;"><span id="title-ctr">0</span>/50</p>
                                     <input type="text" class="form-control" id="judul" aria-describedby="emailHelp"
-                                        placeholder="Contoh: Bantu Korban Bencana Banjir Sulteng" required>
+                                        placeholder="Contoh: Bantu Korban Bencana Banjir Sulteng" required oninput="observeTitle()">
                                 </div>
                             </div>
                             <div class=" mb-3">
                                 <div class="col ">
                                     <label for="exampleFormControlTextarea1" class="form-label mb-0">Deskripsi<span
                                             style="color: red;">*</span></label>
-                                    <p class="d-inline me-4 mb-0" style="float: right;">0/1000</p>
+                                    <p class="d-inline me-4 mb-0" style="float: right;"><span id="desc-ctr">0</span>/1000</p>
                                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
                                         style="resize: none;"
-                                        placeholder="Menceritakan kejadian bencana (Korban  Jiwa, korban Luka-luka, Rumah  Rusan,Dan Lain-lain)"></textarea>
+                                        placeholder="Menceritakan kejadian bencana (Korban  Jiwa, korban Luka-luka, Rumah  Rusan,Dan Lain-lain)" oninput="observeDesc()"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -218,6 +218,20 @@
         </div>
 
     </main>
+
+    <script>
+        function observeTitle() {
+            var ctr = document.getElementById('title-ctr')
+            var inputTitle = document.getElementById('judul')
+            ctr.innerHTML = inputTitle.value.length
+        }
+
+        function observeDesc() {
+            var ctr = document.getElementById('desc-ctr')
+            var inputDesc = document.getElementById('exampleFormControlTextarea1')
+            ctr.innerHTML = inputDesc.value.length
+        }
+    </script>
 </body>
 
 </html>
