adjust: change english to indo

--- a/detail-catur.html
+++ b/detail-catur.html
@@ -64,7 +64,7 @@
                 </a>
 
                 <div class="contact-us">
-                    <h5>Customer Service</h5>
+                    <h5>Pelayanan Pelanggan</h5>
                     <div class="item">
                         <img src="Assets/ic-phone.png">+62 123 4567
                     </div>
@@ -72,14 +72,14 @@
                         <img src="Assets/ic-mail.png">donate.kuy@gmail.com
                     </div>
                     <span>
-                        Donate Kuy 2021. All right reserved
+                        Donate Kuy 2021. Hak cipta dilindungi undang-undang
                     </span>
                 </div>
             </div>
 
             <div class="header">
                 <div class="header-top">
-                    <h1>Hello, Pikri</h1>
+                    <h1>Halo, Robert</h1>
                     <div class="search-bar">
                         <input type="text" id="search-bar-input" placeholder="Cari donasi...">
                         <a href="search.html"><img src="Assets/ic-magnifier.png"></a>
@@ -95,7 +95,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="welcome">Welcome Back</div>
+                <div class="welcome">Selamat Datang!</div>
                 <div class="blue-separator-line"></div>
             </div>
 
@@ -103,7 +103,7 @@
                 <div class="content-wrapper">
                     <div class="content-detail">
                         <div class="paragraph">
-                            <h2>1 Vs 1 Catur Online : Donation</h2>
+                            <h2>1 Lawan 1 Catur Daring : Donasi</h2>
                             <h6>Gotham Chess</h6>
                             <p>
                                 Streaming ini untuk bersama-sama mengumpulkan dana untuk negara Palestina yang bersama-sama kita bisa membangun dunia yang lebih baik
