--- a/login.html
+++ b/login.html
@@ -23,14 +23,14 @@
                 <label for="email-or-num">Email atau Nomor Telepon</label><br>
                 <input type="text" name="email-or-num" id="email-or-num" required><br><br>
 
-                <label for="password">Password</label><br>
+                <label for="password">Kata Sandi</label><br>
                 <input type="password" name="password" id="password" required>
 
                 <a href="home-donatur.html">
                     <button>MASUK</button>
                 </a>
                 <div class="forgot-password">
-                    <a href="forgot-password.html">Lupa Password?</a>
+                    <a href="forgot-password.html">Lupa Kata Sandi?</a>
                 </div>
             </div>
 
