--- a/register.html
+++ b/register.html
@@ -31,10 +31,10 @@
                 <label for="number">Nomor Telepon</label><br>
                 <input type="text" name="number" id="number" required><br><br>
 
-                <label for="password">Password</label><br>
+                <label for="password">Kata Sandi</label><br>
                 <input type="password" name="password" id="password" required><br><br>
 
-                <label for="confirm-password">Konfirmasi Password</label><br>
+                <label for="confirm-password">Konfirmasi Kata Sandi</label><br>
                 <input type="password" name="confirm-password" id="confirm-password" required>
 
                 <a href="#">
