--- a/forgot-password.html
+++ b/forgot-password.html
@@ -17,14 +17,14 @@
     </head>
     <body>
         <main>
-            <h1 style="margin-top: 100px !important;">Lupa Password</h1>
+            <h1 style="margin-top: 100px !important;">Lupa Kata Sandi</h1>
 
             <div class="login-form">
                 <label for="email-or-num">Email atau Nomor Telepon</label><br>
                 <input type="text" name="email-or-num" id="email-or-num" required><br><br>
 
                 <a>
-                    <button onclick="showHidden()">Reset Password</button>
+                    <button onclick="showHidden()">Reset Kata Sandi</button>
                 </a>
 
                 <p id="para" style="visibility: hidden;margin: 0 !important;height: 0;"><br>Email berisi link reset password telah kami kirim ke email anda.</p>
