--- a/profile-history.html
+++ b/profile-history.html
@@ -66,7 +66,7 @@
                 </a>
 
                 <div class="contact-us">
-                    <h5>Customer Service</h5>
+                    <h5>Pelayanan Pelanggan</h5>
                     <div class="item">
                         <img src="Assets/ic-phone.png">+62 123 4567
                     </div>
@@ -74,14 +74,14 @@
                         <img src="Assets/ic-mail.png">donate.kuy@gmail.com
                     </div>
                     <span>
-                        Donate Kuy 2021. All right reserved
+                        Donate Kuy 2021. Hak cipta dilindungi undang-undang
                     </span>
                 </div>
             </div>
 
             <div class="header">
                 <div class="header-top">
-                    <h1>Hello, Pikri</h1>
+                    <h1>Halo, Robert</h1>
                     <div class="search-bar">
                         <input type="text" id="search-bar-input" placeholder="Cari donasi...">
                         <a href="search.html"><img src="Assets/ic-magnifier.png"></a>
@@ -97,7 +97,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="welcome">Welcome Back</div>
+                <div class="welcome">Selamat Datang!</div>
                 <div class="blue-separator-line"></div>
             </div>
 
@@ -146,7 +146,7 @@
                                     <input class="d-inline box-filter p-1 ps-2">
                                 </div>
                                 <div>
-                                    <p class="content-text-2 d-inline">Sort: </p>
+                                    <p class="content-text-2 d-inline">Urutkan: </p>
                                     <div class="d-inline box-filter p-1 ps-2">
                                         <p class="d-inline text-width ">Newly</p>
                                         <img src="Assets/eva_arrow.png" alt="arrow">
