--- a/streams.html
+++ b/streams.html
@@ -67,7 +67,7 @@
             </a>
 
             <div class="contact-us">
-                <h5>Customer Service</h5>
+                <h5>Pelayanan Pelanggan</h5>
                 <div class="item">
                     <img src="Assets/ic-phone.png">+62 123 4567
                 </div>
@@ -75,14 +75,14 @@
                     <img src="Assets/ic-mail.png">donate.kuy@gmail.com
                 </div>
                 <span>
-                    Donate Kuy 2021. All right reserved
+                    Donate Kuy 2021. Hak cipta dilindungi undang-undang
                 </span>
             </div>
         </div>
 
         <div class="header">
             <div class="header-top">
-                <h1>Hello, Pikri</h1>
+                <h1>Halo, Robert</h1>
                 <div class="search-bar">
                     <input type="text" id="search-bar-input" placeholder="Cari donasi...">
                     <a href="search.html"><img src="Assets/ic-magnifier.png"></a>
@@ -98,7 +98,7 @@
                     </div>
                 </a>
             </div>
-            <div class="welcome">Welcome Back</div>
+            <div class="welcome">Selamat Datang!</div>
             <div class="blue-separator-line"></div>
         </div>
 
@@ -109,7 +109,7 @@
                         <h2>Streaming</h2>
                         <div class="filter">
                             <div>
-                                <p class="content-text-2 d-inline">Sort: </p>
+                                <p class="content-text-2 d-inline">Urutkan: </p>
                                 <div class="d-inline box-filter p-1 ps-2">
                                     <p class="d-inline text-width ">Newly</p>
                                     <img src="Assets/eva_arrow.png" alt="arrow">
@@ -152,7 +152,7 @@
                         <a href="detail-catur.html" style="text-decoration: none; color: black;">
                             <div class="charity-item">
                                 <div class="paragraph">
-                                    <h2>1 Vs 1 Catur Online : Donation</h2>
+                                    <h2>1 Lawan 1 Catur Daring : Donasi</h2>
                                     <p>Streaming ini untuk bersama-sama mengumpulkan dana untuk negara Palestina yang bersama-sama kita . . .</p>
                                         <br>
                                     <div class="charity-target">
