--- a/edit-penggalang-dana.html
+++ b/edit-penggalang-dana.html
@@ -63,7 +63,7 @@
             <br><br>
 
             <div class="contact-us">
-                <h5>Pelayanan Pelanggan</h5>
+                <h5>Customer Service</h5>
                 <div class="item">
                     <img src="Assets/ic-phone.png">+62 123 4567
                 </div>
@@ -71,14 +71,14 @@
                     <img src="Assets/ic-mail.png">donate.kuy@gmail.com
                 </div>
                 <span>
-                    Donate Kuy 2021. Hak cipta dilindungi undang-undang
+                    Donate Kuy 2021. All right reserved
                 </span>
             </div>
         </div>
 
         <div class="header">
             <div class="header-top">
-                <h1>Halo, Robert</h1>
+                <h1>Hello, Pikri</h1>
                 <div class="search-bar">
                     <input type="text" id="search-bar-input" placeholder="Cari donasi...">
                     <a href="search.html"><img src="Assets/ic-magnifier.png"></a>
@@ -88,20 +88,20 @@
                     <span class="slider round"></span>
                 </label>
                 <h5>Penggalang Dana</h5>
-                <a href="profile-pd-notifications.html">
+                <a href="profile-notifications.html">
                     <div class="notification">
                         <img id="notif-img" src="Assets/alert.png">
                     </div>
                 </a>
             </div>
-            <div class="welcome">Selamat Datang!</div>
+            <div class="welcome">Welcome Back</div>
             <div class="blue-separator-line"></div>
         </div>
 
         <div class="content">
             <div class="container pt-3 px-5">
                 <div class="col">
-                    <p class="bd-text">Buat Donasi</p>
+                    <p class="bd-text">Edit Donasi</p>
                 </div>
                 <form action="">
                     <div class=" border-image mb-3">
@@ -145,19 +145,19 @@
                                 <div class="col ">
                                     <label for="judul" class="form-label mb-0">Judul Penggalangan
                                         Dana<span style="color: red;">*</span></label>
-                                    <p class="me-4 mb-0" style="float: right;"><span id="title-ctr">0</span>/50</p>
+                                    <p class="me-4 mb-0" style="float: right;">0/50</p>
                                     <input type="text" class="form-control" id="judul" aria-describedby="emailHelp"
-                                        placeholder="Contoh: Bantu Korban Bencana Banjir Sulteng" required oninput="observeTitle()">
+                                        placeholder="Contoh: Bantu Korban Bencana Banjir Sulteng" required>
                                 </div>
                             </div>
                             <div class=" mb-3">
                                 <div class="col ">
                                     <label for="exampleFormControlTextarea1" class="form-label mb-0">Deskripsi<span
                                             style="color: red;">*</span></label>
-                                    <p class="d-inline me-4 mb-0" style="float: right;"><span id="desc-ctr">0</span>/1000</p>
+                                    <p class="d-inline me-4 mb-0" style="float: right;">0/1000</p>
                                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
                                         style="resize: none;"
-                                        placeholder="Menceritakan kejadian bencana (Korban  Jiwa, korban Luka-luka, Rumah  Rusan,Dan Lain-lain)" oninput="observeDesc()"></textarea>
+                                        placeholder="Menceritakan kejadian bencana (Korban  Jiwa, korban Luka-luka, Rumah  Rusan,Dan Lain-lain)"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                     </div>
                     <div class=" mb-3">
                         <div class="col-4 offset-4 text-center">
-                            <p class="gambar-btn-3">Buat Donasi</p>
+                            <p class="gambar-btn-3">Edit Donasi</p>
                         </div>
                     </div>
                 </form>
@@ -219,20 +219,6 @@
         </div>
 
     </main>
-
-    <script>
-        function observeTitle() {
-            var ctr = document.getElementById('title-ctr')
-            var inputTitle = document.getElementById('judul')
-            ctr.innerHTML = inputTitle.value.length
-        }
-
-        function observeDesc() {
-            var ctr = document.getElementById('desc-ctr')
-            var inputDesc = document.getElementById('exampleFormControlTextarea1')
-            ctr.innerHTML = inputDesc.value.length
-        }
-    </script>
 </body>
 
 </html>
