hover image in bukti pembayaran

--- a/bukti-pembayaran-donasi.html
+++ b/bukti-pembayaran-donasi.html
@@ -142,7 +142,11 @@
                 </div>
                 <div class="row px-5 mb-3">
                     <div class="col-4">
-                        <img src="Assets/banjir 1.png" alt="picture" width="350px" height="205px">
+                        <div class="screenshot">
+                            <div class="box">
+                                <img src="Assets/banjir 1.png" alt="picture" width="350px" height="205px">
+                            </div>
+                        </div>
                     </div>
                     <div class="col mt-3">
                         <p class="mb-0 bold-text">Korban Banjir Kota Cirebon</p>
