--- a/detail-cj.html
+++ b/detail-cj.html
@@ -45,42 +45,35 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-person-circle.png">
                     </div>
-                    <h6>Profile</h6>
+                    <h6>Profil</h6>
                 </div>
             </a>
             <br><br>
+
+            <a href="profile-donatur.html">
+                <div class="home-menu-transparant">
+                    <div class="home-menu-transparant-progress-active">
+                        3
+                    </div>
+                    <progress id="file" value="60" max="100"></progress>
+                    <div class="home-menu-transparant-progress">
+                        4
+                    </div>
+                </div>
+            </a>
+            <br><br>
+
+            <a href="rewards.html">
+                <div class="home-menu-transparant">
+                    <div class="home-menu-transparant-inner">
+                        <img src="Assets/ic-reward.png">
+                    </div>
+                    <h6>Hadiah</h6>
+                </div>
+            </a>
 
             <div class="contact-us">
                 <h5>Pelayanan Pelanggan</h5>
-                <div class="item">
-                    <img src="Assets/ic-phone.png">+62 123 4567
-                </div>
-                <progress id="file" value="60" max="100"></progress>
-                <div class="home-menu-transparant-progress">
-                    4
-                </div>
-                <span>
-                    Donate Kuy 2021. Hak cipta dilindungi undang-undang
-                </span>
-            </div>
-            </a>
-            <br><br>
-
-            <div class="header">
-                <div class="header-top">
-                    <h1>Halo, Robert</h1>
-                    <div class="search-bar">
-                        <input type="text" id="search-bar-input" placeholder="Cari donasi...">
-                        <a href="search.html"><img src="Assets/ic-magnifier.png"></a>
-                    </div>
-                    <h6>Rewards</h6>
-                </div>
-                <div class="welcome">Selamat Datang!</div>
-                <div class="blue-separator-line"></div>
-            </div>
-
-            <div class="contact-us">
-                <h5>Customer Service</h5>
                 <div class="item">
                     <img src="Assets/ic-phone.png">+62 123 4567
                 </div>
@@ -88,14 +81,14 @@
                     <img src="Assets/ic-mail.png">donate.kuy@gmail.com
                 </div>
                 <span>
-                    Donate Kuy 2021. All right reserved
+                    Donate Kuy 2021. Hak cipta dilindungi undang-undang
                 </span>
             </div>
         </div>
 
         <div class="header">
             <div class="header-top">
-                <h1>Hello, Pikri</h1>
+                <h1>Halo, Robert</h1>
                 <div class="search-bar">
                     <input type="text" id="search-bar-input" placeholder="Cari donasi...">
                     <a href="search.html"><img src="Assets/ic-magnifier.png"></a>
@@ -111,7 +104,7 @@
                     </div>
                 </a>
             </div>
-            <div class="welcome">Welcome Back</div>
+            <div class="welcome">Selamat Datang!</div>
             <div class="blue-separator-line"></div>
         </div>
 
