--- a/donasi.html
+++ b/donasi.html
@@ -46,7 +46,7 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-person-circle.png">
                     </div>
-                    <h6>Profile</h6>
+                    <h6>Profil</h6>
                 </div>
             </a>
             <br><br>
@@ -69,7 +69,7 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-reward.png">
                     </div>
-                    <h6>Rewards</h6>
+                    <h6>Hadiah</h6>
                 </div>
             </a>
 
