--- a/search.html
+++ b/search.html
@@ -45,7 +45,7 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-person-circle.png">
                     </div>
-                    <h6>Profile</h6>
+                    <h6>Profil</h6>
                 </div>
             </a>
             <br><br>
@@ -68,7 +68,7 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-reward.png">
                     </div>
-                    <h6>Rewards</h6>
+                    <h6>Hadiah</h6>
                 </div>
             </a>
 
@@ -116,17 +116,12 @@
                         <h2>Hasil pencarian untuk "Banjir"...</h2>
                         <div class="filter">
                             <div>
-                                <!-- <p class="content-text-2 d-inline">Sort: </p>
-                                <div class="d-inline box-filter p-1 ps-2">
-                                    <p class="d-inline text-width ">Newly</p>
-                                    <img src="Assets/eva_arrow.png" alt="arrow">
-                                </div> -->
-                                <label for="sort" style="font-weight: bold;">Sort:</label>
+                                <label for="sort" style="font-weight: bold;">Urutkan:</label>
                                 <select id="sort" aria-label="Default select example" required class="px-2 py-1"
                                     style="border-radius: 6px; border-color: #4d80e4;">
-                                    <option selected value="0" style="border-radius: 6px; border-color: #4d80e4;">Newly
+                                    <option selected value="0" style="border-radius: 6px; border-color: #4d80e4;">Terbaru
                                     </option>
-                                    <option value="1" style="border-radius: 6px; border-color: #4d80e4;">Popularity
+                                    <option value="1" style="border-radius: 6px; border-color: #4d80e4;">Populer
                                     </option>
                                     <option value="2" style="border-radius: 6px; border-color: #4d80e4;">Status</option>
                                 </select>
