--- a/streams.html
+++ b/streams.html
@@ -45,7 +45,7 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-person-circle.png">
                     </div>
-                    <h6>Profile</h6>
+                    <h6>Profil</h6>
                 </div>
             </a>
             <br><br>
@@ -68,7 +68,7 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-reward.png">
                     </div>
-                    <h6>Rewards</h6>
+                    <h6>Hadiah</h6>
                 </div>
             </a>
 
@@ -115,12 +115,12 @@
                         <h2>Streaming</h2>
                         <div class="filter">
                             <div>
-                                <label for="sort" style="font-weight: bold;">Sort:</label>
+                                <label for="sort" style="font-weight: bold;">Urutkan:</label>
                                 <select id="sort" aria-label="Default select example" required class="px-2 py-1"
                                     style="border-radius: 6px; border-color: #4d80e4;">
-                                    <option selected value="0" style="border-radius: 6px; border-color: #4d80e4;">Newly
+                                    <option selected value="0" style="border-radius: 6px; border-color: #4d80e4;">Terbaru
                                     </option>
-                                    <option value="1" style="border-radius: 6px; border-color: #4d80e4;">Popularity
+                                    <option value="1" style="border-radius: 6px; border-color: #4d80e4;">Populer
                                     </option>
                                     <option value="2" style="border-radius: 6px; border-color: #4d80e4;">Status</option>
                                 </select>
@@ -128,7 +128,8 @@
                         </div>
                     </div>
                     <div class="charity-items">
-                        <div class="charity-item">
+                    <a href="detail-cj.html" style="text-decoration: none;">
+                        <div class="charity-item" style="text-decoration: none; color: black;">
                             <div class="paragraph">
                                 <h2>PETUALANGAN CJ & SAIPUL</h2>
                                 <p>Streaming ini dilakukan untuk menghibur pendonasi, dan yang paling utama adalah untuk
@@ -144,47 +145,28 @@
                                         <img src="Assets/Ellipse 2.png" alt="status" class="d-inline">
                                         Status: masih berjalan
                                     </div>
-                                    <progress id="file" value="70" max="100"></progress>
-                                    <div class="status">
-                                        <div>
-                                            <img src="Assets/Ellipse 2.png" alt="status" class="d-inline">
-                                            Status: masih berjalan
-                                        </div>
-                                        <div class="time">
-                                            <span><strong>11</strong> hari lagi</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="image">
-                                    <img class="thumbnail" src="Assets/stream1.png">
-
-                                    <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
                                 </div>
                             </div>
+                            
                             <div class="image">
                                 <img class="thumbnail" src="Assets/stream1.png">
 
                                 <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
                             </div>
                         </div>
-
+                    </a>
                         <br>
 
-                        <div class="charity-item">
-                            <div class="paragraph">
-                                <h2>1 Vs 1 Catur Online : Donation</h2>
-                                <p>Streaming ini untuk bersama-sama mengumpulkan dana untuk negara Palestina yang
-                                    bersama-sama kita . . .</p>
-                                <br>
-                                <div class="charity-target">
-                                    <h3>Rp123.000.000</h3>
-                                    <p>Target : Rp150.000.000</p>
-                                </div>
-                                <progress id="file" value="70" max="100"></progress>
-                                <div class="status">
-                                    <div>
-                                        <img src="Assets/Ellipse 2.png" alt="status" class="d-inline">
-                                        Status: masih berjalan
+                    <a href="detail-catur.html" style="text-decoration: none; color: black;">
+                            <div class="charity-item">
+                                <div class="paragraph">
+                                    <h2>1 Lawan 1 Catur Daring : Donasi</h2>
+                                    <p>Streaming ini untuk bersama-sama mengumpulkan dana untuk negara Palestina yang
+                                        bersama-sama kita . . .</p>
+                                    <br>
+                                    <div class="charity-target">
+                                        <h3>Rp123.000.000</h3>
+                                        <p>Target : Rp150.000.000</p>
                                     </div>
                                     <progress id="file" value="70" max="100"></progress>
                                     <div class="status">
@@ -192,35 +174,21 @@
                                             <img src="Assets/Ellipse 2.png" alt="status" class="d-inline">
                                             Status: masih berjalan
                                         </div>
-                                        <div class="time">
-                                            <span><strong>32</strong> hari lagi</span>
-                                        </div>
                                     </div>
                                 </div>
+                                
                                 <div class="image">
                                     <img class="thumbnail" src="Assets/stream2.png">
 
                                     <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
                                 </div>
                             </div>
-                            <div class="image">
-                                <img class="thumbnail" src="Assets/stream2.png">
-
-                                <img class="double-arrow" src="Assets/ic-double-arrow-gray.png">
-                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
 
     </main>
 </body>
-
-<<<<<<< Updated upstream </html>
-    =======
-
 </html>
-
-<<<<<<< Updated upstream asdasdasdas=======asdasdasdasdasdasda>>>>>>> Stashed changes
-    >>>>>>> Stashed changes
