--- a/detail-bogor.html
+++ b/detail-bogor.html
@@ -47,7 +47,7 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-person-circle.png">
                     </div>
-                    <h6>Profile</h6>
+                    <h6>Profil</h6>
                 </div>
             </a>
             <br><br>
@@ -70,12 +70,12 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-reward.png">
                     </div>
-                    <h6>Rewards</h6>
+                    <h6>Hadiah</h6>
                 </div>
             </a>
 
             <div class="contact-us">
-                <h5>Customer Service</h5>
+                <h5>Pelayanan Pelanggan</h5>
                 <div class="item">
                     <img src="Assets/ic-phone.png">+62 123 4567
                 </div>
@@ -83,14 +83,14 @@
                     <img src="Assets/ic-mail.png">donate.kuy@gmail.com
                 </div>
                 <span>
-                    Donate Kuy 2021. All right reserved
+                    Donate Kuy 2021. Hak cipta dilindungi undang-undang
                 </span>
             </div>
         </div>
 
         <div class="header">
             <div class="header-top">
-                <h1>Hello, Pikri</h1>
+                <h1>Halo, Robert</h1>
                 <div class="search-bar">
                     <input type="text" id="search-bar-input" placeholder="Cari donasi...">
                     <a href="search.html"><img src="Assets/ic-magnifier.png"></a>
@@ -106,7 +106,7 @@
                     </div>
                 </a>
             </div>
-            <div class="welcome">Welcome Back</div>
+            <div class="welcome">Selamat Datang!</div>
             <div class="blue-separator-line"></div>
         </div>
 
