--- a/home-donatur.html
+++ b/home-donatur.html
@@ -45,7 +45,7 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-person-circle.png">
                     </div>
-                    <h6>Profile</h6>
+                    <h6>Profil</h6>
                 </div>
             </a>
             <br><br>
@@ -68,12 +68,12 @@
                     <div class="home-menu-transparant-inner">
                         <img src="Assets/ic-reward.png">
                     </div>
-                    <h6>Rewards</h6>
+                    <h6>Hadiah</h6>
                 </div>
             </a>
 
             <div class="contact-us">
-                <h5>Customer Service</h5>
+                <h5>Pelayanan Pelanggan</h5>
                 <div class="item">
                     <img src="Assets/ic-phone.png">+62 123 4567
                 </div>
@@ -81,14 +81,14 @@
                     <img src="Assets/ic-mail.png">donate.kuy@gmail.com
                 </div>
                 <span>
-                    Donate Kuy 2021. All right reserved
+                    Donate Kuy 2021. Hak cipta dilindungi Undang-undang
                 </span>
             </div>
         </div>
 
         <div class="header">
             <div class="header-top">
-                <h1>Hello, Pikri</h1>
+                <h1>Halo, Robert</h1>
                 <div class="search-bar">
                     <input type="text" id="search-bar-input" placeholder="Cari donasi...">
                     <a href="search.html"><img src="Assets/ic-magnifier.png"></a>
@@ -104,7 +104,7 @@
                     </div>
                 </a>
             </div>
-            <div class="welcome">Welcome Back</div>
+            <div class="welcome">Selamat Datang!</div>
             <div class="blue-separator-line"></div>
         </div>
 
@@ -112,10 +112,10 @@
             <div class="content-wrapper">
                 <div class="charity">
                     <div class="title">
-                        <h2>Charity</h2>
+                        <h2>Amal</h2>
                         <a href="charities.html" style="text-decoration: none; color:black;">
                             <div class="view-more">
-                                <h3>View More</h3>
+                                <h3>Lihat Lebih Banyak</h3>
                                 <img src="Assets/ic-arrow.png">
                             </div>
                         </a>
@@ -201,7 +201,7 @@
                         <h2>Streaming</h2>
                         <a href="streams.html" style="text-decoration: none; color:black;">
                             <div class="view-more">
-                                <h3>View More</h3>
+                                <h3>Lihat Lebih Banyak</h3>
                                 <img src="Assets/ic-arrow.png">
                             </div>
                         </a>
@@ -247,7 +247,7 @@
                         <a href="detail-catur.html" style="text-decoration: none; color: black;">
                             <div class="charity-item">
                                 <div class="paragraph">
-                                    <h2>1 Vs 1 Catur Online : Donation</h2>
+                                    <h2>1 Lawan 1 Catur Daring : Donasi</h2>
                                     <p>Streaming ini untuk bersama-sama mengumpulkan dana untuk negara Palestina yang
                                         bersama-sama kita . . .</p>
                                     <br>
